# ParaMetal

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  HeatSpectra.sln  LICENSE  ParaMetal.sln  README.md  build_codex_verify.cmd
.claude/: settings.local.json
HeatSpectra/: AABBTree.cpp  AABBTree.hpp  App.cpp  App.h  BlendPass.cpp  BlendPass.hpp  Camera.cpp  Camera.hpp  CommandBufferManager.cpp  CommandBufferManager.hpp  CommandBufferUtils.cpp  CommandBufferUtils.hpp  CommonSubdivision.cpp  CommonSubdivision.hpp  ContactInterface.cpp  ContactInterface.hpp  ContactLineRenderer.cpp  ContactLineRenderer.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  FrameGraph.cpp  FrameGraph.hpp  FrameGraphVk.cpp  FrameGraphVk.hpp  FramePass.hpp  GBuffer.cpp  GBuffer.hpp  GeodesicTracer.cpp  GeodesicTracer.hpp  GeometryPass.cpp  GeometryPass.hpp  GeometryUtils.hpp  Gizmo.cpp  Gizmo.hpp  Grid.cpp  Grid.hpp  GridLabel.cpp  GridLabel.hpp  HDR.cpp  HDR.hpp  (+103 more)
HeatSpectra/app/: App.cpp  App.h  AppTypes.hpp  MainQt.cpp  MainQt.h  SwapchainManager.cpp  SwapchainStage.cpp  SwapchainStage.hpp  VulkanViewportWidget.cpp  VulkanViewportWidget.hpp  VulkanWindow.cpp
HeatSpectra/contact/: ContactCouplingEdgeBuffers.hpp  ContactGpuStructs.hpp  ContactSampling.cpp  ContactSampling.hpp  ContactSystem.cpp  ContactSystem.hpp  ContactSystemComputeController.cpp  ContactSystemComputeController.hpp  ContactSystemComputeStage.cpp  ContactSystemController.cpp  ContactSystemController.hpp  ContactSystemDisplayController.cpp  ContactSystemDisplayController.hpp  ContactSystemRuntime.cpp  ContactSystemRuntime.hpp  ContactTypes.hpp
HeatSpectra/domain/: ContactData.hpp  GeometryData.hpp  HeatData.hpp  HeatModelData.hpp  RemeshData.hpp  RemeshParams.hpp  VoronoiData.hpp  VoronoiParams.hpp
HeatSpectra/framegraph/: ComputePass.hpp  FrameComputeStage.cpp  FrameComputeStage.hpp  FrameController.cpp  FrameController.hpp  FrameGraph.cpp  FrameGraph.hpp  FrameGraphCompile.cpp  FrameGraphPasses.hpp  FrameGraphResources.hpp  FrameGraphTypes.hpp  FrameGraphVkTypes.hpp  FrameGraphicsStage.cpp  FrameGraphicsStage.hpp  FramePass.hpp  FrameSimulation.hpp  FrameStats.cpp  FrameStats.hpp  FrameSync.cpp  FrameSync.hpp  FrameTypes.hpp  FrameUpdateStage.cpp  FrameUpdateStage.hpp  VkFrameGraphBackend.cpp  VkFrameGraphBackend.hpp  VkFrameGraphRuntime.cpp  VkFrameGraphRuntime.hpp
HeatSpectra/heat/: ContactInterface.cpp  ContactInterface.hpp  ContactSampling.hpp  ContactSystem.cpp  ContactSystem.hpp  ContactSystemController.cpp  ContactSystemController.hpp  HeatContactParams.hpp  HeatContactRuntime.cpp  HeatContactRuntime.hpp  HeatDefaults.hpp  HeatGpuStructs.hpp  HeatIntrinsicTypes.hpp  HeatModelRuntime.cpp  HeatModelRuntime.hpp  HeatReceiver.cpp  HeatReceiver.hpp  HeatReceiverRuntime.cpp  HeatReceiverRuntime.hpp  HeatSolveParams.hpp  HeatSource.cpp  HeatSource.hpp  HeatSourceRuntime.cpp  HeatSourceRuntime.hpp  HeatSystem.cpp  HeatSystem.hpp  HeatSystemComputeController.cpp  HeatSystemComputeController.hpp  HeatSystemContactRuntime.hpp  HeatSystemContactStage.cpp  HeatSystemContactStage.hpp  HeatSystemController.cpp  HeatSystemController.hpp  HeatSystemDebugStage.cpp  HeatSystemDebugStage.hpp  HeatSystemDisplayController.cpp  HeatSystemDisplayController.hpp  HeatSystemPresets.cpp  HeatSystemPresets.hpp  HeatSystemRenderStage.cpp  (+24 more)
HeatSpectra/mesh/: MeshModifiers.cpp  MeshModifiers.hpp
HeatSpectra/models/: bb.mtl  channel_spaceobj.mtl  heatsink.mtl  helmet.mtl  lion.mtl  pig.mtl  testseed.fbx
HeatSpectra/nodegraph/: NodeContact.cpp  NodeContact.hpp  NodeContactPair.cpp  NodeContactPair.hpp  NodeContactPairPanel.cpp  NodeContactPairPanel.hpp  NodeContactPanel.cpp  NodeContactPanel.hpp  NodeContactParams.cpp  NodeContactParams.hpp  NodeGraph.hpp  NodeGraphBridge.cpp  NodeGraphBridge.hpp  NodeGraphCompiler.cpp  NodeGraphCompiler.hpp  NodeGraphController.cpp  NodeGraphController.hpp  NodeGraphCoreTypes.hpp  NodeGraphDataTypes.cpp  NodeGraphDataTypes.hpp  NodeGraphDebugCache.cpp  NodeGraphDebugCache.hpp  NodeGraphDebugStore.cpp  NodeGraphDebugStore.hpp  NodeGraphDisplay.cpp  NodeGraphDisplay.hpp  NodeGraphDock.cpp  NodeGraphDock.hpp  NodeGraphDocument.cpp  NodeGraphDocument.hpp  NodeGraphEditor.cpp  NodeGraphEditor.hpp  NodeGraphExecutionPlanner.cpp  NodeGraphExecutionPlanner.hpp  NodeGraphHash.cpp  NodeGraphHash.hpp  NodeGraphIconRegistry.cpp  NodeGraphKernels.cpp  NodeGraphKernels.hpp  NodeGraphNodeRectItem.hpp  (+74 more)
HeatSpectra/py/: PyBridge.cpp  PyGraphBindings.cpp  PyGraphTypes.hpp  PyIdBindings.cpp  PyInterpreter.cpp  PyInterpreter.hpp  PyModule.cpp  PyParamBindings.cpp  PyRegistryBindings.cpp  PySyntaxHighlighter.cpp  PySyntaxHighlighter.hpp  PyTerminalWidget.hpp
HeatSpectra/render/: BlendPass.cpp  BlendPass.hpp  ContactOverlayRenderer.cpp  ContactOverlayRenderer.hpp  GeometryPass.cpp  GeometryPass.hpp  HeatOverlayRenderer.cpp  HeatOverlayRenderer.hpp  LightingPass.cpp  LightingPass.hpp  MainRenderGraph.cpp  OverlayPass.cpp  OverlayPass.hpp  RenderConfig.hpp  RenderRuntime.cpp  RenderRuntime.hpp  RenderSettings.hpp  RenderTargetManager.cpp  RenderTargetManager.hpp  RenderTargetStage.cpp  RenderTargetStage.hpp  SceneColorSpace.hpp  SceneRenderer.cpp  SceneRenderer.hpp  VoronoiOverlayRenderer.cpp  VoronoiOverlayRenderer.hpp  WindowRuntimeState.hpp
HeatSpectra/renderers/: ContactLineRenderer.cpp  ContactLineRenderer.hpp  GizmoRenderer.cpp  GizmoRenderer.hpp  HashGridRenderer.cpp  HashGridRenderer.hpp  HeatReceiverRenderer.cpp  HeatReceiverRenderer.hpp  HeatRenderer.cpp  HeatRenderer.hpp  HeatSourceRenderer.cpp  HeatSourceRenderer.hpp  HeatSurfaceRenderer.cpp  HeatSurfaceRenderer.hpp  IntrinsicRenderer.cpp  IntrinsicRenderer.hpp  OutlineRenderer.cpp  PointRenderer.cpp  PointRenderer.hpp  SurfelRenderer.cpp  SurfelRenderer.hpp  TimingRenderer.hpp  VectorArrowRenderer.cpp  VectorArrowRenderer.hpp  VoronoiRenderer.cpp  VoronoiRenderer.hpp  WireframeRenderer.cpp  WireframeRenderer.hpp
HeatSpectra/runtime/: ComputeCache.cpp  ComputeCache.hpp  ContactDisplayController.cpp  (+90 more)
ParaMetal/: ParaMetal.vcxproj  ParaMetal.vcxproj.filters
(+968 files in other folders)
